# esp-dl-quant-icra2026

./: .gitignore  GRU_QUICKSTART.md  LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md
drl_quant/: constants.py
drl_quant/data_generation/: README.md  extract_observations.py  generate_calibration.py
drl_quant/espdl_quantize/: README.md  quantize_actor.py  quantize_recurrent.py
drl_quant/inference/: README.md  __init__.py  __main__.py  mqtt_inference.py  player.py  preprocessors.py  runners.py  stats.py
drl_quant/inference/tests/: test_dispatch.py  test_preprocessors.py  test_run_dir.py  test_stats.py  test_traced_runner.py
drl_quant/networks/: README.md  augmented_gru.py  rnn.py  sac.py  td3.py  utils.py
drl_quant/networks/tests/: test_augmented_gru.py
drl_quant/onnx_dynamic_quantize/: README.md  quantize.py
drl_quant/onnx_export/: README.md  _export_compat.py  _naming.py  export_actor.py  export_aug_actor.py  export_aug_gru.py  export_native_gru_actor.py
drl_quant/onnx_export/tests/: test_export_aug_gru.py  test_export_aug_gru_loader.py  test_naming.py
models/: README.md
models/QuaidSIM-v4/esp-dl/: act_net_QuaidSIM-v4_SAC_+238.823_775000.espdl  act_net_QuaidSIM-v4_SAC_+238.823_775000.info  act_net_QuaidSIM-v4_SAC_+238.823_775000.json  act_net_QuaidSIM-v4_SAC_+238.823_775000.native  act_net_QuaidSIM-v4_TD3_+225.827_750000.espdl  act_net_QuaidSIM-v4_TD3_+225.827_750000.info  act_net_QuaidSIM-v4_TD3_+225.827_750000.json  act_net_QuaidSIM-v4_TD3_+225.827_750000.native  aug_act_net_QuaidSIM-v4_RA-SAC_+299.788_850000.espdl  aug_act_net_QuaidSIM-v4_RA-SAC_+299.788_850000.info  aug_act_net_QuaidSIM-v4_RA-SAC_+299.788_850000.json  aug_act_net_QuaidSIM-v4_RA-SAC_+299.788_850000.native  aug_act_net_QuaidSIM-v4_RA-TD3_+364.117_475000.espdl  aug_act_net_QuaidSIM-v4_RA-TD3_+364.117_475000.info  aug_act_net_QuaidSIM-v4_RA-TD3_+364.117_475000.json  aug_act_net_QuaidSIM-v4_RA-TD3_+364.117_475000.native  aug_act_net_QuaidSIM-v4_RA-TD3_+439.031_450000.espdl  aug_act_net_QuaidSIM-v4_RA-TD3_+439.031_450000.info  aug_act_net_QuaidSIM-v4_RA-TD3_+439.031_450000.json  aug_act_net_QuaidSIM-v4_RA-TD3_+439.031_450000.native  aug_act_net_QuaidSIM-v4_RA-TD3_+614.464_500000.espdl  aug_act_net_QuaidSIM-v4_RA-TD3_+614.464_500000.info  aug_act_net_QuaidSIM-v4_RA-TD3_+614.464_500000.json  aug_act_net_QuaidSIM-v4_RA-TD3_+614.464_500000.native
models/QuaidSIM-v4/onnx-quant/: act_net_QuaidSIM-v4_SAC_+238.823_775000_qd.onnx  act_net_QuaidSIM-v4_TD3_+225.827_750000_qd.onnx  aug_act_net_QuaidSIM-v4_RA-SAC_+299.788_850000_qd.onnx  aug_act_net_QuaidSIM-v4_RA-TD3_+364.117_475000_qd.onnx  aug_act_net_QuaidSIM-v4_RA-TD3_+439.031_450000_qd.onnx  aug_act_net_QuaidSIM-v4_RA-TD3_+614.464_500000_qd.onnx  with_gru_act_net_QuaidSIM-v4_RA-SAC_+299.788_850000_qd.onnx  (+1 more)
quaid-env/: README.md
quaid-env/examples/: quaid-icra-real.yaml  quaid-icra-sim.yaml
quaid-env/quaid_env/: env.py  mqtt_controller.py  packets.py  quaid_data.py  reward.py  sqlite_logger.py  theta.py
quaid-env/tests/: test_config.py  test_mqtt_controller.py  test_observations.py  test_reward.py  test_sqlite_logger.py
quaid_env/: README.md  pyproject.toml
quaid_env/examples/: quaid-icra-real.yaml  quaid-icra-sim.yaml
quaid_env/quaid_env/: __init__.py  config.py  mqtt_controller.py  observations.py  quaid_data.py
quaid_env/tests/: test_config.py  test_packets.py
scripts/: README.md  run_quaidsim_v4.sh
(+8 files in other folders)
