[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drl-quant"
version = "0.1.0"
description = "Quantization toolchain for DRL actor networks targeting ESP-DL on ESP32-S3 / ESP32-P4."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
  { name = "Peter Bohm" },
]
keywords = ["reinforcement-learning", "quantization", "esp-dl", "onnx", "ppq", "embedded"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy",
  "pandas",
  "torch",
  "onnx",
  "onnxruntime",
  # torch >= 2.5 imports onnxscript even when calling the legacy
  # torch.onnx.export(...) interface that our exporters use, so this is
  # a hard dep rather than an optional one.
  "onnxscript",
  # Espressif's PPQ fork — the original ``ppq.api.espdl_quantize_onnx``
  # was removed upstream and the ``espdl_*`` entry points now live in
  # esp-ppq. Our quantize_actor / quantize_recurrent import from
  # ``esp_ppq.api``. Pulling esp-ppq also pulls a compatible PPQ core.
  "esp-ppq",
  # PPQ's compiled extensions reference the older protobuf C++ ABI; pip
  # otherwise installs protobuf 4.x which raises at espdl_quantize_onnx
  # time with "TypeError: Descriptors cannot be created directly".
  # 3.20.x is the last 3.x release and what PPQ tests against.
  "protobuf<4.0",
  "paho-mqtt",
]

[project.optional-dependencies]
dev = ["ruff"]

[tool.setuptools.packages.find]
include = ["drl_quant*"]
