[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quaid-env"
version = "0.1.0"
description = "Gymnasium environment for the Quaid quadruped over MQTT."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
  { name = "Peter Bohm" },
]
keywords = ["reinforcement-learning", "robotics", "quadruped", "gymnasium", "mqtt"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "gymnasium>=0.29",
  "numpy",
  "paho-mqtt>=1.6,<2.0",
  "pyyaml",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
include = ["quaid_env*"]
